# T1

./: .codecov.yml  .travis.yml  CMakeLists.txt  README.md  main.c
libs/naive/: check.c  check.h  test_check.cpp
libs/parallel/: check_p.c  check_p.h  pipes.c  test_check_p.cpp
src/: main.c  test_toy.cpp  toy.c  toy.h
test_data/: data.txt  fscanf.txt  fscanf_2.txt  incorrect_data.txt  memory.txt
